[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/JajanSimulatorEnvTiles.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/LevelGenerator.gd" type="Script" id=4]
[ext_resource path="res://Scenes/ShelfGUI.tscn" type="PackedScene" id=5]

[node name="MainLevel" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 3 )]
tile_set = ExtResource( 1 )
cell_quadrant_size = 64
cell_clip_uv = true
tile_data = PoolIntArray( 0, 70, 0, 1, 70, 0, 2, 4, 0, 3, 70, 0, 4, 70, 0, 5, 4, 0, 6, 70, 0, 7, 70, 0, 8, 4, 0, 9, 70, 0, 10, 70, 0, 11, 4, 0, 12, 70, 0, 13, 70, 0, 14, 70, 0, 15, 4, 0, 16, 70, 0, 17, 70, 0, 18, 70, 0, 65536, 70, 0, 65537, 13, 0, 65538, 13, 0, 65539, 13, 0, 65540, 13, 0, 65541, 13, 0, 65542, 13, 0, 65543, 13, 0, 65544, 13, 0, 65545, 13, 0, 65546, 13, 0, 65547, 13, 0, 65548, 13, 0, 65549, 13, 0, 65550, 13, 0, 65551, 13, 0, 65552, 13, 0, 65553, 13, 0, 65554, 70, 0, 131072, 4, 0, 131073, 15, 0, 131074, 15, 0, 131075, 15, 0, 131076, 15, 0, 131077, 15, 0, 131078, 15, 0, 131079, 15, 0, 131080, 15, 0, 131081, 15, 0, 131082, 15, 0, 131083, 15, 0, 131084, 15, 0, 131085, 15, 0, 131086, 15, 0, 131087, 15, 0, 131088, 15, 0, 131089, 15, 0, 131090, 4, 0, 196608, 70, 0, 196609, 15, 0, 196610, 15, 0, 196611, 15, 0, 196612, 15, 0, 196613, 15, 0, 196614, 15, 0, 196615, 15, 0, 196616, 15, 0, 196617, 15, 0, 196618, 15, 0, 196619, 15, 0, 196620, 15, 0, 196621, 15, 0, 196622, 15, 0, 196623, 15, 0, 196624, 15, 0, 196625, 15, 0, 196626, 4, 0, 262144, 4, 0, 262145, 15, 0, 262146, 15, 0, 262147, 15, 0, 262148, 15, 0, 262149, 15, 0, 262150, 15, 0, 262151, 15, 0, 262152, 15, 0, 262153, 15, 0, 262154, 15, 0, 262155, 15, 0, 262156, 15, 0, 262157, 15, 0, 262158, 15, 0, 262159, 15, 0, 262160, 15, 0, 262161, 15, 0, 262162, 70, 0, 327680, 70, 0, 327681, 15, 0, 327682, 15, 0, 327683, 15, 0, 327684, 15, 0, 327685, 15, 0, 327686, 15, 0, 327687, 15, 0, 327688, 15, 0, 327689, 15, 0, 327690, 15, 0, 327691, 15, 0, 327692, 15, 0, 327693, 15, 0, 327694, 15, 0, 327695, 15, 0, 327696, 15, 0, 327697, 15, 0, 327698, 70, 0, 393216, 70, 0, 393217, 15, 0, 393218, 15, 0, 393219, 15, 0, 393220, 15, 0, 393221, 15, 0, 393222, 15, 0, 393223, 15, 0, 393224, 15, 0, 393225, 15, 0, 393226, 15, 0, 393227, 15, 0, 393228, 15, 0, 393229, 15, 0, 393230, 15, 0, 393231, 15, 0, 393232, 15, 0, 393233, 15, 0, 393234, 70, 0, 458752, 70, 0, 458753, 15, 0, 458754, 15, 0, 458755, 15, 0, 458756, 15, 0, 458757, 15, 0, 458758, 15, 0, 458759, 15, 0, 458760, 15, 0, 458761, 15, 0, 458762, 15, 0, 458763, 15, 0, 458764, 15, 0, 458765, 15, 0, 458766, 15, 0, 458767, 15, 0, 458768, 15, 0, 458769, 15, 0, 458770, 4, 0, 524288, 4, 0, 524289, 15, 0, 524290, 15, 0, 524291, 15, 0, 524292, 15, 0, 524293, 15, 0, 524294, 15, 0, 524295, 15, 0, 524296, 15, 0, 524297, 15, 0, 524298, 15, 0, 524299, 15, 0, 524300, 15, 0, 524301, 15, 0, 524302, 15, 0, 524303, 15, 0, 524304, 15, 0, 524305, 15, 0, 524306, 4, 0, 589824, 70, 0, 589825, 15, 0, 589826, 15, 0, 589827, 15, 0, 589828, 15, 0, 589829, 15, 0, 589830, 15, 0, 589831, 15, 0, 589832, 15, 0, 589833, 15, 0, 589834, 15, 0, 589835, 15, 0, 589836, 15, 0, 589837, 15, 0, 589838, 15, 0, 589839, 15, 0, 589840, 15, 0, 589841, 15, 0, 589842, 70, 0, 655360, 70, 0, 655361, 15, 0, 655362, 15, 0, 655363, 15, 0, 655364, 15, 0, 655365, 15, 0, 655366, 15, 0, 655367, 15, 0, 655368, 15, 0, 655369, 15, 0, 655370, 15, 0, 655371, 15, 0, 655372, 15, 0, 655373, 15, 0, 655374, 15, 0, 655375, 15, 0, 655376, 15, 0, 655377, 15, 0, 655378, 70, 0, 720896, 4, 0, 720897, 15, 0, 720898, 15, 0, 720899, 15, 0, 720900, 15, 0, 720901, 15, 0, 720902, 15, 0, 720903, 15, 0, 720904, 15, 0, 720905, 15, 0, 720906, 15, 0, 720907, 15, 0, 720908, 15, 0, 720909, 15, 0, 720910, 15, 0, 720911, 87, 0, 720912, 87, 0, 720913, 15, 0, 720914, 70, 0, 786432, 4, 0, 786433, 15, 0, 786434, 15, 0, 786435, 15, 0, 786436, 15, 0, 786437, 15, 0, 786438, 15, 0, 786439, 15, 0, 786440, 15, 0, 786441, 15, 0, 786442, 15, 0, 786443, 15, 0, 786444, 15, 0, 786445, 15, 0, 786446, 15, 0, 786447, 15, 0, 786448, 15, 0, 786449, 15, 0, 786450, 4, 0, 851968, 70, 0, 851969, 87, 0, 851970, 87, 0, 851971, 87, 0, 851972, 87, 0, 851973, 87, 0, 851974, 87, 0, 851975, 87, 0, 851976, 87, 0, 851977, 87, 0, 851978, 87, 0, 851979, 88, 0, 851980, 88, 0, 851981, 88, 0, 851982, 88, 0, 851983, 88, 0, 851984, 88, 0, 851985, 88, 0, 851986, 4, 0, 917504, 70, 0, 917505, 87, 0, 917506, 87, 0, 917507, 87, 0, 917508, 87, 0, 917509, 87, 0, 917510, 87, 0, 917511, 87, 0, 917512, 87, 0, 917513, 87, 0, 917514, 87, 0, 917515, 88, 0, 917516, 88, 0, 917517, 88, 0, 917518, 88, 0, 917519, 88, 0, 917520, 88, 0, 917521, 88, 0, 917522, 70, 0, 983040, 3, 0, 983041, 87, 0, 983042, 87, 0, 983043, 87, 0, 983044, 87, 0, 983045, 87, 0, 983046, 87, 0, 983047, 87, 0, 983048, 87, 0, 983049, 87, 0, 983050, 87, 0, 983051, 88, 0, 983052, 88, 0, 983053, 88, 0, 983054, 88, 0, 983055, 88, 0, 983056, 88, 0, 983057, 88, 0, 983058, 5, 0, 1048576, 70, 0, 1048594, 70, 0 )

[node name="ObjBottomPart" parent="." instance=ExtResource( 3 )]
tile_set = ExtResource( 1 )
tile_data = PoolIntArray( 131073, 92, 0, 131074, 97, 0, 131075, 97, 0, 131076, 97, 0, 131077, 97, 0, 131078, 97, 0, 131079, 94, 0, 131080, 41, 0, 131081, 92, 0, 131082, 97, 0, 131083, 97, 0, 131084, 97, 0, 131085, 97, 0, 131086, 97, 0, 131087, 94, 0, 196616, 41, 0, 196624, 45, 0, 262145, 56, 0, 262146, 56, 0, 262147, 57, 0, 262148, 45, 0, 262150, 45, 0, 262152, 42, 0, 262153, 53, 0, 262154, 55, 0, 262155, 55, 0, 262156, 55, 0, 262157, 55, 0, 262158, 55, 0, 262159, 57, 0, 262160, 45, 0, 327684, 46, 0, 327686, 46, 0, 327688, 43, 0, 327696, 46, 0, 393217, 56, 0, 393218, 56, 0, 393219, 57, 0, 393220, 47, 0, 393222, 47, 0, 393225, 92, 0, 393226, 97, 0, 393227, 97, 0, 393228, 94, 0, 393229, 53, 0, 393230, 55, 0, 393231, 57, 0, 393232, 47, 0, 458760, 41, 0, 524289, 53, 0, 524290, 54, 0, 524291, 54, 0, 524292, 54, 0, 524293, 54, 0, 524294, 54, 0, 524295, 57, 0, 524296, 41, 0, 524298, 25, 0, 524299, 38, 0, 524300, 37, 0, 524301, 37, 0, 524302, 37, 0, 524303, 37, 0, 524304, 37, 0, 524305, 39, 0, 589832, 42, 0, 589834, 26, 0, 655361, 38, 0, 655362, 37, 0, 655363, 37, 0, 655364, 37, 0, 655365, 37, 0, 655366, 37, 0, 655367, 39, 0, 655368, 43, 0, 655370, 27, 0, 655371, 38, 0, 655372, 37, 0, 655373, 37, 0, 655374, 39, 0, 655375, 38, 0, 655376, 37, 0, 655377, 37, 0, 786433, 37, 0, 786434, 37, 0, 786435, 37, 0, 786436, 39, 0, 786437, 38, 0, 786438, 37, 0, 786439, 37, 0, 786440, 37, 0, 786441, 37, 0, 786442, 37, 0, 786443, 39, 0, 983052, 65, 0, 983054, 65, 0, 983056, 65, 0 )

[node name="Obstacle" parent="." instance=ExtResource( 3 )]
tile_set = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 460, 246 )

[node name="ObjTopPart" parent="." instance=ExtResource( 3 )]
tile_set = ExtResource( 1 )
tile_data = PoolIntArray( 65537, 91, 0, 65538, 95, 0, 65539, 95, 0, 65540, 95, 0, 65541, 95, 0, 65542, 95, 0, 65543, 93, 0, 65544, 40, 0, 65545, 91, 0, 65546, 95, 0, 65547, 95, 0, 65548, 95, 0, 65549, 95, 0, 65550, 95, 0, 65551, 93, 0, 131088, 44, 0, 196609, 49, 0, 196610, 49, 0, 196611, 52, 0, 196612, 44, 0, 196614, 44, 0, 196617, 48, 0, 196618, 49, 0, 196619, 49, 0, 196620, 49, 0, 196621, 49, 0, 196622, 49, 0, 196623, 52, 0, 327681, 49, 0, 327682, 49, 0, 327683, 52, 0, 327689, 91, 0, 327690, 95, 0, 327691, 95, 0, 327692, 93, 0, 327693, 48, 0, 327694, 49, 0, 327695, 52, 0, 393224, 40, 0, 458753, 48, 0, 458754, 49, 0, 458755, 49, 0, 458756, 49, 0, 458757, 49, 0, 458758, 49, 0, 458759, 52, 0, 458762, 24, 0, 458763, 28, 0, 458764, 29, 0, 458765, 29, 0, 458766, 29, 0, 458767, 29, 0, 458768, 29, 0, 458769, 33, 0, 589825, 28, 0, 589826, 29, 0, 589827, 29, 0, 589828, 29, 0, 589829, 29, 0, 589830, 29, 0, 589831, 33, 0, 589835, 28, 0, 589836, 29, 0, 589837, 29, 0, 589838, 33, 0, 589839, 28, 0, 589840, 29, 0, 589841, 29, 0, 720897, 29, 0, 720898, 29, 0, 720899, 29, 0, 720900, 33, 0, 720901, 28, 0, 720902, 29, 0, 720903, 29, 0, 720904, 29, 0, 720905, 29, 0, 720906, 29, 0, 720907, 33, 0, 917516, 64, 0, 917518, 64, 0, 917520, 64, 0 )

[node name="BackgroundBottom" parent="." instance=ExtResource( 3 )]
tile_set = ExtResource( 1 )
tile_data = PoolIntArray( 0, 66, 0, 1, 67, 0, 2, 67, 0, 3, 67, 0, 4, 67, 0, 5, 67, 0, 6, 67, 0, 7, 67, 0, 8, 67, 0, 9, 67, 0, 10, 67, 0, 11, 67, 0, 12, 67, 0, 13, 67, 0, 14, 67, 0, 15, 67, 0, 16, 67, 0, 17, 67, 0, 18, 68, 0, 65536, 69, 0, 65554, 71, 0, 131072, 69, 0, 131090, 71, 0, 196608, 69, 0, 196626, 71, 0, 262144, 69, 0, 262162, 71, 0, 327680, 69, 0, 327698, 71, 0, 393216, 69, 0, 393234, 71, 0, 458752, 69, 0, 458770, 71, 0, 524288, 69, 0, 524306, 71, 0, 589824, 69, 0, 589842, 71, 0, 655360, 69, 0, 655378, 71, 0, 720896, 69, 0, 720912, 87, 0, 720914, 71, 0, 786432, 69, 0, 786450, 71, 0, 851968, 69, 0, 851986, 71, 0, 917504, 69, 0, 917522, 71, 0, 983040, 9, 0, 983041, 10, 0, 983042, 10, 0, 983043, 10, 0, 983044, 10, 0, 983045, 10, 0, 983046, 10, 0, 983047, 10, 0, 983048, 10, 0, 983049, 10, 0, 983050, 10, 0, 983051, 10, 0, 983052, 10, 0, 983053, 10, 0, 983054, 10, 0, 983055, 10, 0, 983056, 10, 0, 983057, 10, 0, 983058, 11, 0, 1048576, 12, 0, 1048577, 13, 0, 1048578, 20, 0, 1048579, 13, 0, 1048580, 16, 0, 1048581, 17, 0, 1048582, 13, 0, 1048583, 20, 0, 1048584, 13, 0, 1048585, 13, 0, 1048586, 13, 0, 1048587, 20, 0, 1048588, 13, 0, 1048589, 13, 0, 1048590, 18, 0, 1048591, 13, 0, 1048592, 13, 0, 1048593, 20, 0, 1048594, 14, 0 )

[node name="ShelfGUI" parent="." instance=ExtResource( 5 )]
visible = false
margin_top = -1.0
margin_bottom = -1.0

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 425.0
margin_top = 272.0
margin_right = 494.0
margin_bottom = 298.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
